# uic-number-detector

./: CMakeLists.txt  Dockerfile  README.md  mytest  out.txt  results.txt
data/: char_datasetNM1.csv  char_datasetNM2_number.csv
img/results/: main.cpp  mytest  out.txt
models/: character_classifier_2.xml  character_classifier_test.xml  character_classifier_uic.xml  trained_classifierNM1_number.xml  trained_classifierNM2_number.xml  trained_classifierNM2_original.xml
src/: Cli.cpp  Cli.h  main.cpp  results.h
src/char/: ChannelCharacterDetector.h  CharDetectors.h  CharGridFilter.cpp  CharGridFilter.h  CharMerger.cpp  CharMerger.h  CharScalePiepline.h  CharacterCandidate.cpp  CharacterCandidate.h  CharacterDetector.h  DistanceTransform.cpp  DistanceTransform.h  GridFilterProcess.h  MergedCandidate.h  MovedCharacter.cpp  MovedCharacter.h  ScaledCharacter.h
src/char/erstat/: ERStatCandidate.h  ERStatDetector.h  NMModelTrainer.cpp  NMModelTrainer.h
src/char/fastext/: FasTextDetector.h  FasTextOptions.h  FastCandidate.h  FastCharacter.h  FastPoint.h  FastPointDetector.h  FastPointFactory.h  FastPointSegmenter.h  NeighbourVisitor.cpp  NeighbourVisitor.h
src/cv/: ChannelWrapper.h  ImagePipeline.h  ImageUtils.cpp  ImageUtils.h  ScaleWrapper.h
src/line/: ChannelLineDetector.h  CustomLineDetector.cpp  CustomLineDetector.h  LineCandidate.cpp  LineCandidate.h  LineCharacterDetector.h  LineDetector.cpp  LineDetector.h  NMCharLineDetector.h  NMLineDetector.cpp  NMLineDetector.h  ScaleLineProcess.h  TextLine.cpp  TextLine.h
src/ocr/: CharClassifier.cpp  CharClassifier.h  OCRTesseract.cpp  OCRTesseract.h  TextDetector.cpp  TextDetector.h
src/test/: CharDetectorEvaluator.cpp  CharDetectorEvaluator.h
src/ui/: ItemSelector.h  UicDetectorSelector.cpp  UicDetectorSelector.h  UicSelector.cpp  UicSelector.h  UicWindow.cpp  UicWindow.h
src/uic/: ChannelUicProcess.h  DetectorEvaluator.cpp  DetectorEvaluator.h  FeedbackLoopProcess.cpp  FeedbackLoopProcess.h  ScaleUicProcess.h  UicCharDetector.h  UicCombinerProcess.h  UicDataset.cpp  UicDataset.h  UicDebugHelper.cpp  UicDebugHelper.h  UicDetector.cpp  UicDetector.h  UicEvaluator.cpp  UicEvaluator.h  UicUtils.h
src/utils/: DataCollector.h  IOUtils.cpp  Median.h  ParallelUtils.cpp  RingBuffer.h  TimeLogger.cpp  TimeLogger.h  TimeUtils.cpp  TimeUtils.h  UICDetectors.h
src_view/: extract_featuresNM2.cpp  train_classifierNM1.cpp  train_classifierNM2.cpp
src_view/text/: erfilter.cpp
